# justrdp

./: CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE2_STATUS.md  check.md  roadmap.md  rust-toolchain.toml
crates/justrdp-acceptor/: Cargo.toml
crates/justrdp-acceptor/src/: acceptor.rs  config.rs  encode_helpers.rs  error.rs  lib.rs  mcs.rs  result.rs  sequence.rs  state.rs
crates/justrdp-async/: Cargo.toml
crates/justrdp-async/src/: driver.rs  input.rs  lib.rs  reconnect.rs  redirect.rs  session.rs  telemetry.rs  translate.rs  transport.rs
crates/justrdp-audio/: Cargo.toml
crates/justrdp-audio/src/: aac.rs  error.rs  ima_adpcm.rs  lib.rs  ms_adpcm.rs  opus.rs  pcm.rs
crates/justrdp-blocking/: CHECKLIST.md  Cargo.toml
crates/justrdp-blocking/examples/: cliprdr_cli.rs  connect_test.rs
crates/justrdp-blocking/src/: client.rs  credssp.rs  error.rs  event.rs  gateway.rs  lib.rs  rdpfile.rs  reconnect.rs  telemetry.rs  transport.rs
crates/justrdp-blocking/tests/: mock_redirect.rs  mock_rpch_gateway.rs
crates/justrdp-bulk/: Cargo.toml
crates/justrdp-bulk/src/: bulk.rs  lib.rs  mppc.rs  ncrush.rs  xcrush.rs  zgfx.rs
crates/justrdp-cliprdr/: Cargo.toml
crates/justrdp-cliprdr-native/: Cargo.toml
crates/justrdp-cliprdr-native/src/: common.rs  lib.rs  macos.rs  surface.rs  wayland.rs  windows.rs  x11.rs
crates/justrdp-cliprdr/src/: backend.rs  lib.rs  processor.rs  server.rs
crates/justrdp-cliprdr/src/pdu/: caps.rs  file_contents.rs  file_list.rs  format_data.rs  format_list.rs  header.rs  lock.rs  mod.rs  temp_dir.rs  util.rs
crates/justrdp-codecs/: Cargo.toml
crates/justrdp-codecs/src/: clearcodec.rs  color.rs  egfx.rs  lib.rs  planar.rs  pointer.rs  rle.rs
crates/justrdp-codecs/src/rfx/: dwt.rs  mod.rs  quant.rs  rlgr.rs
crates/justrdp-codecs/tests/: clearcodec_corpus.rs  differential_ironrdp_graphics.rs  differential_pointer_ironrdp.rs  differential_rfx.rs
crates/justrdp-connector/: Cargo.toml
crates/justrdp-connector/src/: aad.rs  config.rs  connector.rs  encode_helpers.rs  error.rs  lib.rs  rdpfile.rs  result.rs  sequence.rs  state.rs
crates/justrdp-connector/src/credssp/: gss_wrap.rs  kerberos.rs  mod.rs  spnego.rs  ts_request.rs
crates/justrdp-core/: Cargo.toml
crates/justrdp-core/src/: aes.rs  base64url.rs  bignum.rs  crypto.rs  cursor.rs  des.rs  dh.rs  encode.rs  error.rs  lib.rs  rsa.rs  write_buf.rs
crates/justrdp-cursor/: Cargo.toml
crates/justrdp-cursor/src/: lib.rs
crates/justrdp-derive/: Cargo.toml
crates/justrdp-derive/src/: lib.rs
crates/justrdp-derive/tests/ui/: bytes_zero.rs  bytes_zero.stderr  duplicate_keys.rs  duplicate_keys.stderr  empty_attr.rs  empty_attr.stderr  missing_attr.rs  missing_attr.stderr  on_enum.rs  on_enum.stderr  pad_zero.rs  pad_zero.stderr  rest_not_last.rs  rest_not_last.stderr  unknown_attr.rs  unknown_attr.stderr
crates/justrdp-displaycontrol/: Cargo.toml
crates/justrdp-displaycontrol/src/: client.rs  lib.rs  pdu.rs
crates/justrdp-dvc/: Cargo.toml
crates/justrdp-dvc/src/: drdynvc.rs  drdynvc_server.rs  lib.rs  pdu.rs  reassembly.rs
crates/justrdp-egfx/: Cargo.toml
crates/justrdp-egfx/src/: client.rs  lib.rs  server.rs
crates/justrdp-egfx/src/pdu/: avc.rs  bitmap.rs  cache.rs  caps.rs  draw.rs  frame.rs  mod.rs  surface.rs
crates/justrdp-gateway/: Cargo.toml
crates/justrdp-gateway/src/: auth.rs  client.rs  http.rs  lib.rs  pdu.rs  transport.rs  transport_util.rs  ws.rs  ws_transport.rs
crates/justrdp-gateway/src/rpch/: bind.rs  channel.rs  client.rs  errors.rs  methods.rs  mod.rs  paa.rs  types.rs
crates/justrdp-gateway/tests/: mock_gateway.rs
crates/justrdp-graphics/: Cargo.toml
crates/justrdp-graphics/src/: avc.rs  clearcodec.rs  lib.rs  nscodec.rs  planar.rs  pointer.rs  rle.rs  utils.rs
crates/justrdp-graphics/src/rfx/: color.rs  dwt.rs  frame_encoder.rs  mod.rs  quant.rs  rlgr.rs  subband.rs  tile.rs  wire.rs
crates/justrdp-input/: Cargo.toml
crates/justrdp-input/src/: lib.rs
crates/justrdp-pdu/: Cargo.toml
crates/justrdp-pdu/src/: ber.rs  capability.rs  client_info.rs  cms.rs  cursor.rs  displaycontrol.rs  dvc.rs  egfx.rs  errinfo.rs  error.rs  fastpath.rs  finalization.rs  gcc.rs  input.rs  lib.rs  license.rs  mcs.rs  nego.rs  pcb.rs  per.rs  pointer.rs  rdpemt.rs  rfx.rs  share.rs  svc.rs  tpkt.rs  update.rs  x224.rs
crates/justrdp-pdu/src/gcc/: client.rs  mod.rs  server.rs
crates/justrdp-pdu/src/kerberos/: asn1.rs  kdcproxy.rs  messages.rs  mod.rs  pkinit.rs  spnego.rs
crates/justrdp-pdu/src/mcs/: ber.rs  mod.rs  per.rs
crates/justrdp-pdu/src/ntlm/: compute.rs  messages.rs  mod.rs  signing.rs
crates/justrdp-pdu/src/rdp/: bitmap.rs  capabilities.rs  client_info.rs  drawing_orders.rs  error_info.rs  (+12 more)
crates/justrdp-pdu/tests/: differential_activation.rs  differential_ironrdp.rs
crates/justrdp-pkinit-card/: Cargo.toml
crates/justrdp-pkinit-card/src/: lib.rs  mock.rs  pcsc.rs  pcsc_backend.rs  provider.rs
crates/justrdp-rail/: Cargo.toml
crates/justrdp-rail/src/: backend.rs  lib.rs  processor.rs
crates/justrdp-rdpdr/: Cargo.toml
crates/justrdp-rdpdr-native/: Cargo.toml
crates/justrdp-rdpdr-native/src/: create.rs  dir_info.rs  fs_info.rs  handle_map.rs  lib.rs  path.rs  std_fs.rs  surface.rs  volume_info.rs
crates/justrdp-rdpdr/src/: backend.rs  lib.rs  processor.rs  server.rs
crates/justrdp-rdpeai/: Cargo.toml
crates/justrdp-rdpeai-native/: Cargo.toml
crates/justrdp-rdpeai-native/src/: coreaudio.rs  lib.rs  pulse.rs  wavein.rs
crates/justrdp-rdpeai/src/: client.rs  lib.rs  pdu.rs
crates/justrdp-rdpecam/: Cargo.toml
crates/justrdp-rdpecam/src/: camera.rs  constants.rs  device.rs  enumerator.rs  lib.rs  pdu.rs
crates/justrdp-rdpecam/tests/: flow.rs
crates/justrdp-rdpedc/: Cargo.toml
crates/justrdp-rdpedc/src/: client.rs  constants.rs  lib.rs  pdu.rs
crates/justrdp-rdpegt/: Cargo.toml
crates/justrdp-rdpegt/src/: client.rs  lib.rs  pdu.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capability.rs  clearcodec.rs  egfx.rs  fastpath.rs  license.rs  planar.rs  pointer.rs  rfx.rs  rle.rs
(+313 files in other folders)
