# Virtual workspace for justrdp — a from-scratch, sans-IO RDP client library.
# Crate split per ADR-0001 (sans-IO core) + plan.md decision 6 (pragmatic 3+1).
[workspace]
resolver = "2"
members = ["crates/justrdp-pdu", "crates/justrdp", "crates/justrdp-codecs", "crates/justrdp-tokio"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justrdp"

[workspace.dependencies]
justrdp-pdu = { path = "crates/justrdp-pdu" }
justrdp = { path = "crates/justrdp" }
justrdp-codecs = { path = "crates/justrdp-codecs" }
# The only external dependency slice-1 introduces: the async runtime the I/O adapter drives the
# sans-IO core with. rustls / sspi (ADR-0002) arrive in later slices.
tokio = { version = "1", default-features = false }
# Structured observability (plan.md §11d): each Connect Stage is a tracing span; a no-op without a
# subscriber, so it does not compromise sans-IO purity or portability.
tracing = { version = "0.1", default-features = false }
# TLS (slice-2, ADR-0002): rustls is a leaf, security-critical, non-RDP dependency used verbatim.
# `ring` provider avoids the aws-lc-rs NASM build requirement on Windows.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
# X.509 SubjectPublicKeyInfo extraction for CredSSP public-key binding — a leaf ASN.1/encoding lib,
# not RDP protocol (ADR-0002). Lives in `justrdp` only; `justrdp-pdu` stays zero-dependency.
x509-cert = "0.2"
# NLA authentication (slice-3, ADR-0002 / plan.md decision 10): `sspi` owns CredSSP / SPNEGO / NTLM /
# Kerberos verbatim — security-critical, non-RDP. Lives in the adapter (`justrdp-tokio`) only, the
# same place `rustls` landed: it drives the `CredSspClient` token loop, so the sans-IO core never
# sees a TSRequest.
sspi = "0.21"
# Cancellation plumbing for the adapter's session loop (slice-8): `CancellationToken` lets the
# host cancel a resize / tear the session down without racing the select loop. Adapter-only,
# like tokio itself.
tokio-util = { version = "0.7", default-features = false }
# Self-signed certificates for CI tests (dev-dependency only): the mock TLS server's cert and the
# SPKI-extraction property test both generate a throwaway cert at test time.
rcgen = "0.13"

# ADR-0004 fork-bridge (issue #61): sspi 0.21.0's CredSspServer cannot complete a Negotiate-NTLM
# handshake with its own CredSspClient (Devolutions/sspi-rs#687) — which blocks our loopback
# full-CredSSP test. The fix is submitted upstream (Devolutions/sspi-rs#688); until it ships on
# crates.io we ride the fork, pinned to the exact PR commit (the fork carries upstream-PR'd
# commits ONLY). REMOVE this block and bump sspi when the fix is released (see issue #61).
[patch.crates-io]
sspi = { git = "https://github.com/kihyun1998/sspi-rs", rev = "a432f9a" }
