[package]
name = "justrdp-acceptor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RDP server connection acceptance state machine for JustRDP"
keywords = ["rdp", "server", "state-machine"]
categories = ["no-std", "network-programming"]

[features]
default = ["alloc"]
alloc = ["justrdp-core/alloc", "justrdp-pdu/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-pdu/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-pdu.workspace = true
