[package]
name = "justrdp-async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Runtime-agnostic async RDP client core (WebTransport family + WebClient pump). Shared by justrdp-web (browser/wasm) and justrdp-tokio (native)."
keywords = ["rdp", "async", "transport"]
categories = ["network-programming", "asynchronous"]

[dependencies]
justrdp-core = { workspace = true, features = ["alloc"] }
justrdp-connector = { workspace = true }
justrdp-input.workspace = true
justrdp-pdu.workspace = true
justrdp-session = { workspace = true, features = ["alloc"] }

[dev-dependencies]
pollster = "0.3"
