[package]
name = "justrdp-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Audio codecs for JustRDP (PCM, MS-ADPCM, IMA-ADPCM)"
keywords = ["rdp", "audio", "codec", "adpcm"]
categories = ["no-std", "multimedia::audio"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[dependencies]
