[package]
name = "justrdp-blocking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Synchronous std::net-based I/O runtime for JustRDP (RdpClient, reconnect, redirect)"
keywords = ["rdp", "blocking", "client"]
categories = ["network-programming"]

[features]
default = ["rustls"]
rustls = ["justrdp-tls/rustls-backend"]
native-tls = ["justrdp-tls/native-tls-backend"]
# Emit `tracing` spans and events for connect / reconnect / redirect
# flow. Off by default so minimal-dep users do not pay for a
# subscriber framework they are not going to wire up.
tracing = ["dep:tracing"]

[dependencies]
justrdp-core = { workspace = true, features = ["alloc", "std"] }
justrdp-pdu.workspace = true
justrdp-connector.workspace = true
justrdp-session.workspace = true
justrdp-svc.workspace = true
justrdp-input.workspace = true
justrdp-tls.workspace = true
justrdp-rdpfile = { workspace = true, features = ["alloc"] }
justrdp-gateway.workspace = true
tracing = { version = "0.1", optional = true }
getrandom = "0.2"
