[package]
name = "justrdp-cliprdr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Clipboard Redirection (MS-RDPECLIP) for JustRDP"
keywords = ["rdp", "clipboard", "cliprdr"]
categories = ["no-std", "network-programming"]

[features]
default = ["alloc"]
alloc = ["justrdp-core/alloc", "justrdp-svc/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-svc/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-svc.workspace = true
