[package]
name = "justrdp-connector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RDP client connection state machine for JustRDP"
keywords = ["rdp", "connection", "state-machine"]
categories = ["no-std", "network-programming"]

[features]
default = ["alloc"]
alloc = ["justrdp-core/alloc", "justrdp-pdu/alloc", "justrdp-pkinit-card/alloc", "justrdp-rdpfile/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-pdu/std", "justrdp-pkinit-card/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-pdu.workspace = true
justrdp-pkinit-card.workspace = true
justrdp-rdpfile.workspace = true
