[package]
name = "justrdp-cursor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cursor sprite decoder + per-session cache for MS-RDPBCGR pointer update PDUs"
keywords = ["rdp", "cursor", "pointer"]
categories = ["network-programming"]

[dependencies]

[dev-dependencies]
