[package]
name = "justrdp-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Derive macros for JustRDP Encode/Decode traits"
keywords = ["rdp", "pdu", "derive", "macro"]
categories = ["no-std", "encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
