[package]
name = "justrdp-egfx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RDPEGFX Graphics Pipeline Extension for JustRDP"
keywords = ["rdp", "egfx", "graphics", "protocol"]
categories = ["network-programming"]

[features]
default = ["alloc"]
alloc = [
    "justrdp-core/alloc",
    "justrdp-dvc/alloc",
    "justrdp-bulk/alloc",
]
std = [
    "alloc",
    "justrdp-core/std",
    "justrdp-dvc/std",
    "justrdp-bulk/std",
]

[dependencies]
justrdp-core.workspace = true
justrdp-dvc.workspace = true
justrdp-bulk.workspace = true
