[package]
name = "justrdp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Remote Desktop Gateway (MS-TSGU) transport for JustRDP"
keywords = ["rdp", "gateway", "tsgu"]
categories = ["no-std", "network-programming"]

[features]
default = ["std"]
alloc = ["justrdp-core/alloc", "justrdp-pdu/alloc", "justrdp-rpch/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-pdu/std", "justrdp-rpch/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-pdu.workspace = true
justrdp-rpch.workspace = true

[dev-dependencies]
# Used only to cross-validate our inlined minimal TSRequest DER
# encoder against the canonical one in justrdp-connector::credssp.
justrdp-connector.workspace = true
