[package]
name = "justrdp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Remote Desktop Gateway (MS-TSGU) transport for JustRDP"
keywords = ["rdp", "gateway", "tsgu"]
categories = ["no-std", "network-programming"]

[features]
# Default to `alloc` so async / no_std consumers (justrdp-tokio's
# gateway feature, future wasm gateway shims) get the PDU + state
# machine surface without any std I/O. The blocking std-side
# transports live behind `std` and are opted into explicitly by
# `justrdp-blocking`.
default = ["alloc"]
alloc = ["justrdp-core/alloc", "justrdp-pdu/alloc", "justrdp-rpch/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-pdu/std", "justrdp-rpch/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-pdu.workspace = true
justrdp-rpch.workspace = true

[dev-dependencies]
# Used only to cross-validate our inlined minimal TSRequest DER
# encoder against the canonical one in justrdp-connector::credssp.
justrdp-connector.workspace = true
