[package]
name = "justrdp-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Input event management (keyboard, mouse) for JustRDP"
keywords = ["rdp", "input", "keyboard", "mouse"]
categories = ["no-std"]

[features]
default = []

[dependencies]
