[package]
name = "justrdp-pkinit-card"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Smartcard / HSM abstraction for client-side PKINIT in JustRDP"
keywords = ["rdp", "pkinit", "smartcard", "kerberos"]
categories = ["network-programming", "authentication"]

[features]
default = ["alloc", "mock"]
alloc = ["justrdp-core/alloc", "justrdp-pdu/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-pdu/std"]
mock = []
# Phase 2: cross-platform PC/SC native backend. Untested without real
# hardware — the pure APDU helpers are unit-tested but the live
# Context::establish / Card::transmit paths are unverified. Enabling
# this feature requires `std` (the `pcsc` crate is not no_std).
pcsc = ["dep:pcsc", "std"]

[dependencies]
justrdp-core.workspace = true
justrdp-pdu.workspace = true
pcsc = { version = "2.8", optional = true }
