[package]
name = "justrdp-rdpeai-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native audio capture backends for justrdp-rdpeai (MS-RDPEAI)"
keywords = ["rdp", "audio-input", "capture"]
categories = ["multimedia::audio"]

[dependencies]
justrdp-rdpeai = { workspace = true, features = ["std"] }
justrdp-rdpsnd = { workspace = true, features = ["std"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Media_Audio",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { version = "2.28", optional = true }
libpulse-simple-binding = { version = "2.28", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = "0.2", optional = true, default-features = false, features = ["audio_unit", "audio_toolbox", "core_audio"] }

[features]
default = []
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
coreaudio = ["dep:coreaudio-sys"]
