[package]
name = "justrdp-rdpecam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Video Capture (Camera) Virtual Channel Extension (MS-RDPECAM) for JustRDP"
keywords = ["rdp", "camera", "rdpecam", "dvc"]
categories = ["no-std", "network-programming"]

[features]
default = ["alloc"]
alloc = ["justrdp-core/alloc", "justrdp-dvc/alloc"]
std = ["alloc", "justrdp-core/std", "justrdp-dvc/std"]

[dependencies]
justrdp-core.workspace = true
justrdp-dvc.workspace = true
